# sprint-undertaker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  apprunner.yaml  docker-compose.yml  log_config.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
alembic/: env.py
alembic/versions/: 20260314_000001_initial_schema.py  20260314_000002_title_presentation_fields.py  20260314_000003_title_visibility.py  20260315_000004_title_focus_refresh.py  20260315_000005_weekly_projects.py  20260317_000006_notifications.py  20260319_000007_email_verification.py  20260322_000008_character_is_public.py
clients/claude-code-hook/: README.md  config.example  idle_rpg_claude_hook.py  sprint_undertaker_hook.py
clients/codex-wrapper/: README.md  config.example  dev-rpg-codex  install.sh
docs/: product.md  public-profile.md  weekly-project.md  work.md
scripts/: sync_titles.py  weekly_project.py
server/: config.py  database.py  installers.py  main.py  title_definitions.py  web.py
server/api/: auth.py  characters.py  deps.py  events.py  installations.py  notifications.py  organizations.py  titles.py
server/models/: __init__.py  character.py  email_code.py  event.py  installation.py  notification.py  organization.py  title.py  user.py  weekly_project.py
server/schemas/: auth.py  character.py  event.py  installation.py  notification.py  organization.py  title.py
server/services/: auth.py  email.py  progression.py  (+2 more)
tests/: conftest.py  test_auth.py  test_notifications.py  test_organizations.py  test_progression_api.py
(+38 files in other folders)
