[project]
name = "sprint-undertaker"
version = "0.1.0"
description = "Multi-provider developer RPG backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic-settings==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "pydantic[email]==2.10.4",
    "jinja2==3.1.6",
    "psycopg[binary]==3.2.6",
    "httpx==0.28.1",
    "aiosmtplib>=3.0,<4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]
